refactor(Schedule): 기능별 메소드 분리